--- a/index.html
+++ b/index.html
@@ -336,8 +336,7 @@
                                                                 <img src="./assets/instagram-white.png" loading="lazy"
                                                                     alt="Instagram Icon" class="icon-1x1-small" />
                                                             </a>
-                                                            <a href="https://www.instagram.com/gutierrezgaux/?hl=es-la"
-                                                                class="footer-social-link w-inline-block"
+                                                            <a href="#" class="footer-social-link w-inline-block"
                                                                 target="_blank">
                                                                 <img src="./assets/linkedin-white.png" loading="lazy"
                                                                     alt="LinkedIn Icon" class="icon-1x1-small" />
@@ -388,8 +387,7 @@
                                                                 <img src="./assets/instagram-white.png" loading="lazy"
                                                                     alt="Instagram Icon" class="icon-1x1-small" />
                                                             </a>
-                                                            <a href="https://www.instagram.com/gutierrezgaux/?hl=es-la"
-                                                                class="footer-social-link w-inline-block"
+                                                            <a href="#" class="footer-social-link w-inline-block"
                                                                 target="_blank">
                                                                 <img src="./assets/linkedin-white.png" loading="lazy"
                                                                     alt="LinkedIn Icon" class="icon-1x1-small" />
@@ -428,17 +426,17 @@
                                                         <div class="redes-c ">
                                                     <div id="w-node-_7bb6a5d1-d920-daa7-a18a-a375547d8c96-547d8c7d"
                                     class="w-layout-grid footer-social-list">
-                                    <a href="https://www.facebook.com/dentalidcuu/"
+                                    <a href="https://www.facebook.com/profile.php?id=100009749049911"
                                         class="footer-social-link w-inline-block" target="_blank">
                                         <img src="./assets/facebook.png" loading="lazy" alt="Facebook Icon"
                                             class="icon-1x1-small" />
                                     </a>
-                                    <a href="https://www.instagram.com/dentalid.depositodental/?hl=es-la"
+                                    <a href="https://www.instagram.com/heberroberto.leonsalazar"
                                         class="footer-social-link w-inline-block" target="_blank">
                                         <img src="./assets/instagram.png" loading="lazy" alt="Instagram Icon"
                                             class="icon-1x1-small" />
                                     </a>
-                                    <a href="https://www.instagram.com/gutierrezgaux/?hl=es-la"
+                                    <a href="#"
                                         class="footer-social-link w-inline-block" target="_blank">
                                         <img src="./assets/linkedin.png" loading="lazy" alt="LinkedIn Icon"
                                             class="icon-1x1-small" />
@@ -477,20 +475,17 @@
                                                         <div id="w-node-_7bb6a5d1-d920-daa7-a18a-a375547d8c96-547d8c7d"
                                                             class="d-flex justify-content-center redes-c-gap"
                                                             class="w-layout-grid footer-social-list">
-                                                            <a href="https://www.facebook.com/dentalidcuu/"
-                                                                class="footer-social-link w-inline-block"
+                                                            <a href="#" class="footer-social-link w-inline-block"
                                                                 target="_blank">
                                                                 <img src="./assets/facebook-white.png" loading="lazy"
                                                                     alt="Facebook Icon" class="icon-1x1-small" />
                                                             </a>
-                                                            <a href="https://www.instagram.com/dentalid.depositodental/?hl=es-la"
-                                                                class="footer-social-link w-inline-block"
+                                                            <a href="#" class="footer-social-link w-inline-block"
                                                                 target="_blank">
                                                                 <img src="./assets/instagram-white.png" loading="lazy"
                                                                     alt="Instagram Icon" class="icon-1x1-small" />
                                                             </a>
-                                                            <a href="https://www.instagram.com/gutierrezgaux/?hl=es-la"
-                                                                class="footer-social-link w-inline-block"
+                                                            <a href="#" class="footer-social-link w-inline-block"
                                                                 target="_blank">
                                                                 <img src="./assets/linkedin-white.png" loading="lazy"
                                                                     alt="LinkedIn Icon" class="icon-1x1-small" />
@@ -504,50 +499,7 @@
 
                                         </div>
                                     </div>
-                                    <!-- <div role="listitem" class="speaker-collection-item w-dyn-item">
-                                        <div class="speaker-item">
-                                            <div class="speaker-image-wrapper">
-                                                <img src="./assets/placeholder.jpg" loading="lazy"
-                                                    alt="Dr. Fermin Ocañas" class="speaker-image img-fluid" />
-                                            </div>
-                                            <div class="speaker-content-wrapper">
-                                                <div class="heading-style-h4 title-dr">Dr. Fermin Ocañas</div>
-                                                <div class="text-size-medium">Titulo</div>
-                                                <div class="speaker-bio-content">
-                                                    <p class="text-bio">Lorem ipsum, dolor sit amet consectetur
-                                                        adipisicing elit. Consequuntur ut quibusdam minima, quae aliquam
-                                                        explicabo aspernatur, ducimus ullam repellendus incidunt unde
-                                                        numquam fuga vero farnatur, ducimus ullam repellendus incidunt
-                                                        unde
-                                                        numquam fuga vero fcilis. Perferendis earum ipsa debitis
-                                                        eveniet?</p>
-                                                        <div class="redes-c ">
-                                                    <div id="w-node-_7bb6a5d1-d920-daa7-a18a-a375547d8c96-547d8c7d"
-                                    class="w-layout-grid footer-social-list">
-                                    <a href="https://www.facebook.com/dentalidcuu/"
-                                        class="footer-social-link w-inline-block" target="_blank">
-                                        <img src="./assets/facebook.png" loading="lazy" alt="Facebook Icon"
-                                            class="icon-1x1-small" />
-                                    </a>
-                                    <a href="https://www.instagram.com/dentalid.depositodental/?hl=es-la"
-                                        class="footer-social-link w-inline-block" target="_blank">
-                                        <img src="./assets/instagram.png" loading="lazy" alt="Instagram Icon"
-                                            class="icon-1x1-small" />
-                                    </a>
-                                    <a href="https://www.instagram.com/gutierrezgaux/?hl=es-la"
-                                        class="footer-social-link w-inline-block" target="_blank">
-                                        <img src="./assets/linkedin.png" loading="lazy" alt="LinkedIn Icon"
-                                            class="icon-1x1-small" />
-                                    </a>
-                                </div>
 
-                                                </div>
-                                                </div>
-                                                
-                                            </div>
-
-                                        </div>
-                                    </div> -->
                                     <div role="listitem" class="speaker-collection-item w-dyn-item">
                                         <div class="speaker-item">
                                             <div class="speaker-image-wrapper">
@@ -575,20 +527,17 @@
                                                         <div id="w-node-_7bb6a5d1-d920-daa7-a18a-a375547d8c96-547d8c7d"
                                                             class="d-flex justify-content-center g-2"
                                                             class="w-layout-grid footer-social-list">
-                                                            <a href="https://www.facebook.com/dentalidcuu/"
-                                                                class="footer-social-link w-inline-block"
+                                                            <a href="#" class="footer-social-link w-inline-block"
                                                                 target="_blank">
                                                                 <img src="./assets/facebook-white.png" loading="lazy"
                                                                     alt="Facebook Icon" class="icon-1x1-small" />
                                                             </a>
-                                                            <a href="https://www.instagram.com/dentalid.depositodental/?hl=es-la"
-                                                                class="footer-social-link w-inline-block"
+                                                            <a href="#" class="footer-social-link w-inline-block"
                                                                 target="_blank">
                                                                 <img src="./assets/instagram-white.png" loading="lazy"
                                                                     alt="Instagram Icon" class="icon-1x1-small" />
                                                             </a>
-                                                            <a href="https://www.instagram.com/gutierrezgaux/?hl=es-la"
-                                                                class="footer-social-link w-inline-block"
+                                                            <a href="#" class="footer-social-link w-inline-block"
                                                                 target="_blank">
                                                                 <img src="./assets/linkedin-white.png" loading="lazy"
                                                                     alt="LinkedIn Icon" class="icon-1x1-small" />
@@ -627,20 +576,17 @@
                                                         <div id="w-node-_7bb6a5d1-d920-daa7-a18a-a375547d8c96-547d8c7d"
                                                             class="d-flex justify-content-center g-2"
                                                             class="w-layout-grid footer-social-list">
-                                                            <a href="https://www.facebook.com/dentalidcuu/"
-                                                                class="footer-social-link w-inline-block"
+                                                            <a href="#" class="footer-social-link w-inline-block"
                                                                 target="_blank">
                                                                 <img src="./assets/facebook-white.png" loading="lazy"
                                                                     alt="Facebook Icon" class="icon-1x1-small" />
                                                             </a>
-                                                            <a href="https://www.instagram.com/dentalid.depositodental/?hl=es-la"
-                                                                class="footer-social-link w-inline-block"
+                                                            <a href="#" class="footer-social-link w-inline-block"
                                                                 target="_blank">
                                                                 <img src="./assets/instagram-white.png" loading="lazy"
                                                                     alt="Instagram Icon" class="icon-1x1-small" />
                                                             </a>
-                                                            <a href="https://www.instagram.com/gutierrezgaux/?hl=es-la"
-                                                                class="footer-social-link w-inline-block"
+                                                            <a href="#" class="footer-social-link w-inline-block"
                                                                 target="_blank">
                                                                 <img src="./assets/linkedin-white.png" loading="lazy"
                                                                     alt="LinkedIn Icon" class="icon-1x1-small" />
@@ -683,20 +629,17 @@
                                                         <div id="w-node-_7bb6a5d1-d920-daa7-a18a-a375547d8c96-547d8c7d"
                                                             class="d-flex justify-content-center g-2"
                                                             class="w-layout-grid footer-social-list">
-                                                            <a href="https://www.facebook.com/dentalidcuu/"
-                                                                class="footer-social-link w-inline-block"
+                                                            <a href="#" class="footer-social-link w-inline-block"
                                                                 target="_blank">
                                                                 <img src="./assets/facebook-white.png" loading="lazy"
                                                                     alt="Facebook Icon" class="icon-1x1-small" />
                                                             </a>
-                                                            <a href="https://www.instagram.com/dentalid.depositodental/?hl=es-la"
-                                                                class="footer-social-link w-inline-block"
+                                                            <a href="#" class="footer-social-link w-inline-block"
                                                                 target="_blank">
                                                                 <img src="./assets/instagram-white.png" loading="lazy"
                                                                     alt="Instagram Icon" class="icon-1x1-small" />
                                                             </a>
-                                                            <a href="https://www.instagram.com/gutierrezgaux/?hl=es-la"
-                                                                class="footer-social-link w-inline-block"
+                                                            <a href="#" class="footer-social-link w-inline-block"
                                                                 target="_blank">
                                                                 <img src="./assets/linkedin-white.png" loading="lazy"
                                                                     alt="LinkedIn Icon" class="icon-1x1-small" />
@@ -1165,8 +1108,7 @@
                                                     <img src="./assets/instagram.png" loading="lazy"
                                                         alt="Instagram Icon" class="icon-1x1-small" />
                                                 </a>
-                                                <a href="https://www.instagram.com/gutierrezgaux/?hl=es-la"
-                                                    class="footer-social-link" target="_blank">
+                                                <a href="#" class="footer-social-link" target="_blank">
                                                     <img src="./assets/linkedin.png" loading="lazy" alt="LinkedIn Icon"
                                                         class="icon-1x1-small" />
                                                 </a>
