--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
             <div class="ps-5 pe-2 navegacionF w-100 d-flex align-center">
                 <div class="menuhamburger w-100 d-flex justify-content-center align-items-center">
                     <div class="logo d-flex justify-content-center justify-content-md-center mx-auto">
-                        <a href="#" aria-current="page" class="navbar-logo-link w-nav-brand w--current">
+                        <a href="index.html" aria-current="page" class="navbar-logo-link w-nav-brand w--current">
                             <img src="./assets/¿.webp" loading="lazy" alt="Logo" class="navbar-logo" />
                         </a>
                     </div>
@@ -130,7 +130,7 @@
                         </nav>
                     </div>
                     <div class=" ml-5 registro botonHeader d-flex justify-content-center align-items-center ms-auto">
-                        <a href="/payment-form" class="button w-button btn-abrir-popup">Comprar Entrada</a>
+                        <a href="payment-form.html" class="button w-button btn-abrir-popup">Comprar Entrada</a>
                     </div>
                 </div>
             </div>
