--- a/index.html
+++ b/index.html
@@ -1726,64 +1726,18 @@
 
 
 
-                            <style>
-                                .important {
-                                    text-align: center;
-                                    max-width: 1000px;
-                                    margin-left: auto;
-                                    margin-right: auto;
-                                    margin-bottom: 20px;
-                                }
 
-                                .disclaimer {
-                                    text-align: center;
-                                    max-width: 1000px;
-                                    margin-left: auto;
-                                    margin-right: auto;
-                                }
-
-
-                                .footer-credit {
-                                    text-align: center;
-                                    max-width: 500px;
-                                    margin-left: auto;
-                                    margin-right: auto;
-                                    margin-top: 20px;
-                                }
-
-                                .vexa-logo {
-                                    width: 20%;
-                                }
-
-                                .footer-bottom-wrapper2 {
-                                    grid-column-gap: 1.5rem;
-                                    grid-row-gap: 1.5rem;
-                                    grid-template-rows: auto;
-                                    grid-template-columns: max-content;
-                                    grid-auto-columns: max-content;
-                                    grid-auto-flow: column;
-                                    justify-content: center;
-                                    align-items: center;
-                                }
-
-                                .text-size-small {
-                                    font-size: 0.875rem;
-                                    text-align: center;
-                                    margin-left: auto;
-                                    max-width: 500px;
-                                    margin-right: auto;
-                                }
-                            </style>
                         </div>
                     </div>
 
-                    <div class="w-layout-grid footer-link-list align-items-center">
+                    <div class="w-layout-grid footer-link-list align-items-end">
                         <nav id="nav-up" class="nav-footer">
-                            <a href="#conferencistas" class="navbar-link w-nav-link">Conferencistas</a>
-                            <a href="#agenda" class="navbar-link w-nav-link">Itinerario</a>
-                            <a href="#location" class="navbar-link w-nav-link">Ubicación</a>
-                            <a href="#section-home-partner" class="navbar-link w-nav-link">Organizadores</a>
-                            <a href="#faq" class="navbar-link w-nav-link">FAQs</a>
+                            <a href="#conferencistas" class="navbar-link w-nav-link links-footer">Conferencistas</a>
+                            <a href="#agenda" class="navbar-link w-nav-link links-footer">Itinerario</a>
+                            <a href="#location" class="navbar-link w-nav-link links-footer">Ubicación</a>
+                            <a href="#section-home-partner"
+                                class="navbar-link w-nav-link links-footer">Organizadores</a>
+                            <a href="#faq" class="navbar-link w-nav-link links-footer">FAQs</a>
 
                         </nav>
                         <!-- </div>
