--- a/index.html
+++ b/index.html
@@ -464,12 +464,14 @@
                                             diversos ponentes altamente capacitados, este busca ser un evento
                                             representativo del estado de chihuahua en el área dental.</p>
                                     </div>
+
+
                                     <div class="margin-top margin-medium">
                                         <div class="highlights-item-list">
                                             <div id="w-node-d82c716a-a54d-1950-7a06-e729d2461735-3863c98b"
                                                 class="highlights-item">
-                                                <img src="https://assets.website-files.com/64463f5f0937fac90063c9a3/644805aee2568633cd4a077a_check-circle-duotone.svg"
-                                                    loading="lazy" alt="Check Icon" class="icon-1x1-small" />
+                                                <img src="assets/marca-de-verificacion.png" loading="lazy"
+                                                    alt="Check Icon" class="icon-1x1-small" />
                                                 <div class="highlight-content">
                                                     <p class="text-size-medium text-uppercase">Conferencias exclusivas
                                                     </p>
@@ -477,16 +479,16 @@
                                             </div>
                                             <div id="w-node-ef5b19e6-4ab8-47ea-ff07-1d50496e6d2d-3863c98b"
                                                 class="highlights-item">
-                                                <img src="https://assets.website-files.com/64463f5f0937fac90063c9a3/644805aee2568633cd4a077a_check-circle-duotone.svg"
-                                                    loading="lazy" alt="Check Icon" class="icon-1x1-small" />
+                                                <img src="assets/marca-de-verificacion.png" loading="lazy"
+                                                    alt="Check Icon" class="icon-1x1-small" />
                                                 <div class="highlight-content">
                                                     <p class="text-size-medium text-uppercase">Aperitivos</p>
                                                 </div>
                                             </div>
                                             <div id="w-node-_065f8c8e-1d97-0abf-4335-7ba6a507108b-3863c98b"
                                                 class="highlights-item">
-                                                <img src="https://assets.website-files.com/64463f5f0937fac90063c9a3/644805aee2568633cd4a077a_check-circle-duotone.svg"
-                                                    loading="lazy" alt="Check Icon" class="icon-1x1-small" />
+                                                <img src="assets/marca-de-verificacion.png" loading="lazy"
+                                                    alt="Check Icon" class="icon-1x1-small" />
                                                 <div class="highlight-content">
                                                     <p class="text-size-medium text-uppercase">Fiesta Rompe Hielo *</p>
                                                 </div>
