--- a/index.html
+++ b/index.html
@@ -1504,12 +1504,40 @@
 
 
             <div class="union-grid">
+                <!-- slider de imagenes -->
+                <section class="slider-img px-lg-0 px-2">
+                    <div class="slider-container">
+                        <div class="background-image">
 
+                        </div>
+                        <div class="slider">
+                            <div class="slides">
+                                <div class="slide">
+                                    <img src="assets/dentalid~248.webp" alt="Image 3">
+                                </div>
+                                <div class="slide">
+                                    <img src="assets/dentalid~269.webp" alt="Image 4">
+                                </div>
+                                <div class="slide"><img src="assets/dentalid~290.webp" alt="Image 5">
+                                </div>
+                                <div class="slide">
+                                    <img src="assets/dentalid~42.webp" alt="Image 6">
+                                </div>
+                                <div class="slide">
+                                    <img src="assets/dentalid~75.webp" alt="Image 7">
+                                </div>
+
+                            </div>
+                        </div>
+                        <button class="nav-button prev-button">❮</button>
+                        <button class="nav-button next-button">❯</button>
+                    </div>
+                </section>
 
                 <!-- faqs -->
                 <section id="faq" class="section-home-faq mt-5">
 
-                    <div class="container-small">
+                    <div class="d-flex justify-content-center align-items-center flex-column">
 
                         <div class="mt-3 faqsMovil">
                             <div class="text-align-center">
@@ -1659,35 +1687,6 @@
                     </div>
                 </section>
 
-                <!-- slider de imagenes -->
-                <section class="slider-img px-lg-0 px-2">
-                    <div class="slider-container">
-                        <div class="background-image">
-
-                        </div>
-                        <div class="slider">
-                            <div class="slides">
-                                <div class="slide">
-                                    <img src="assets/dentalid~248.webp" alt="Image 3">
-                                </div>
-                                <div class="slide">
-                                    <img src="assets/dentalid~269.webp" alt="Image 4">
-                                </div>
-                                <div class="slide"><img src="assets/dentalid~290.webp" alt="Image 5">
-                                </div>
-                                <div class="slide">
-                                    <img src="assets/dentalid~42.webp" alt="Image 6">
-                                </div>
-                                <div class="slide">
-                                    <img src="assets/dentalid~75.webp" alt="Image 7">
-                                </div>
-
-                            </div>
-                        </div>
-                        <button class="nav-button prev-button">❮</button>
-                        <button class="nav-button next-button">❯</button>
-                    </div>
-                </section>
 
 
 
