--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
 
 
 
-            <header class="header navbar navbar-expand-lg navbar-light bg-light">
+            <header class="header navbar navbar-expand-lg navbar-light bg-light py-3">
                 <div class="ps-5 pe-2 navegacionF w-100 d-flex align-center">
                     <div class="menuhamburger w-100 d-flex justify-content-center align-items-center">
                         <div class="logo d-flex justify-content-center justify-content-md-center mx-auto">
@@ -969,7 +969,7 @@
                                         </div>
                                         <div id="w-node-e34d5b91-3aba-9615-b8b6-6bf9c5b3e11a-3863c98b"
                                             class="agenda-content2">
-                                            <div class="margin-bottom margin-xsmall">
+                                            <div class="margin-bottom ">
                                                 <h3>Registro</h3>
                                             </div>
                                         </div>
@@ -981,7 +981,7 @@
                                         </div>
                                         <div id="w-node-_092b5cf7-288f-355b-4821-e2dbff1fb160-3863c98b"
                                             class="agenda-content">
-                                            <div class="margin-bottom margin-xsmall">
+                                            <div class="margin-bottom ">
                                                 <h3>Conferencia #1</h3>
                                             </div>
                                         </div>
@@ -998,7 +998,7 @@
                                         </div>
                                         <div id="w-node-e43f4d9d-549f-2a50-8a36-32b01124765e-3863c98b"
                                             class="agenda-content2">
-                                            <div class="margin-bottom margin-xsmall">
+                                            <div class="margin-bottom ">
                                                 <h3>Receso / Carteles</h3>
                                             </div>
                                         </div>
@@ -1010,7 +1010,7 @@
                                         </div>
                                         <div id="w-node-_7b27f06b-c19d-31f8-9771-1ff04b737f2c-3863c98b"
                                             class="agenda-content">
-                                            <div class="margin-bottom margin-xsmall">
+                                            <div class="margin-bottom ">
                                                 <h3>Remodelación de la Estética Rosa, Cirugía Plástica Periodontal</h3>
                                             </div>
                                         </div>
@@ -1030,7 +1030,7 @@
                                         </div>
                                         <div id="w-node-d17faf61-0b41-190f-fc7b-8c8bf949ca1c-3863c98b"
                                             class="agenda-content2">
-                                            <div class="margin-bottom margin-xsmall">
+                                            <div class="margin-bottom ">
                                                 <h3>Comida</h3>
                                             </div>
                                         </div>
@@ -1042,7 +1042,7 @@
                                         </div>
                                         <div id="w-node-_49babfcc-9d07-d8c3-63f5-1107f8f9a7ef-3863c98b"
                                             class="agenda-content">
-                                            <div class="margin-bottom margin-xsmall">
+                                            <div class="margin-bottom ">
                                                 <h3>Comunicándonos Para un Mejor Resultado</h3>
                                             </div>
                                         </div>
@@ -1061,7 +1061,7 @@
                                         </div>
                                         <div id="w-node-_7b699b8b-95d7-42bd-c521-b9c1d63011af-3863c98b"
                                             class="agenda-content2">
-                                            <div class="margin-bottom margin-xsmall">
+                                            <div class="margin-bottom ">
                                                 <h3>Rifa Colgate</h3>
                                             </div>
                                         </div>
@@ -1073,7 +1073,7 @@
                                         </div>
                                         <div id="w-node-_49babfcc-9d07-d8c3-63f5-1107f8f9a7ef-3863c98b"
                                             class="agenda-content">
-                                            <div class="margin-bottom margin-xsmall">
+                                            <div class="margin-bottom ">
                                                 <h3>Restauraciones Bio-miméticas en el Segmento Anterior</h3>
                                             </div>
                                         </div>
@@ -1094,7 +1094,7 @@
                                         </div>
                                         <div id="w-node-e76cb932-36d5-1daa-65da-f00d3ca37b0d-3863c98b"
                                             class="agenda-content2">
-                                            <div class="margin-bottom margin-xsmall">
+                                            <div class="margin-bottom ">
                                                 <h3>Fiesta Rompe Hielos *</h3>
                                             </div>
                                             <p class=""></p>
@@ -1108,7 +1108,7 @@
                                         </div>
                                         <div id="w-node-e34d5b91-3aba-9615-b8b6-6bf9c5b3e11a-3863c98b"
                                             class="agenda-content">
-                                            <div class="margin-bottom margin-xsmall">
+                                            <div class="margin-bottom ">
                                                 <h3>Conferencia #1</h3>
                                             </div>
                                         </div>
@@ -1124,7 +1124,7 @@
                                         </div>
                                         <div id="w-node-_092b5cf7-288f-355b-4821-e2dbff1fb160-3863c98b"
                                             class="agenda-content2">
-                                            <div class="margin-bottom margin-xsmall">
+                                            <div class="margin-bottom ">
                                                 <h3>Receso</h3>
                                             </div>
                                         </div>
@@ -1136,7 +1136,7 @@
                                         </div>
                                         <div id="w-node-e43f4d9d-549f-2a50-8a36-32b01124765e-3863c98b"
                                             class="agenda-content">
-                                            <div class="margin-bottom margin-xsmall">
+                                            <div class="margin-bottom ">
                                                 <h3>Neuro Marketing Dental</h3>
                                             </div>
                                         </div>
@@ -1156,7 +1156,7 @@
                                         </div>
                                         <div id="w-node-d17faf61-0b41-190f-fc7b-8c8bf949ca1c-3863c98b"
                                             class="agenda-content2">
-                                            <div class="margin-bottom margin-xsmall">
+                                            <div class="margin-bottom ">
                                                 <h3>Comida</h3>
                                             </div>
                                         </div>
@@ -1188,7 +1188,7 @@
                                         </div>
                                         <div id="w-node-_7b699b8b-95d7-42bd-c521-b9c1d63011af-3863c98b"
                                             class="agenda-content2">
-                                            <div class="margin-bottom margin-xsmall">
+                                            <div class="margin-bottom ">
                                                 <h3>Receso / Carteles</h3>
                                             </div>
                                         </div>
@@ -1218,7 +1218,7 @@
                                         </div>
                                         <div id="w-node-_7b699b8b-95d7-42bd-c521-b9c1d63011af-3863c98b"
                                             class="agenda-content2">
-                                            <div class="margin-bottom margin-xsmall">
+                                            <div class="margin-bottom ">
                                                 <h3 id="location">Clausura / Decisión de Jurado de Carteles</h3>
                                             </div>
                                         </div>
@@ -1229,70 +1229,7 @@
                     </div>
                 </div>
 
-                <style>
-                    .conferencista-titulo {
-                        font-weight: bold;
-                    }
 
-                    .agenda-list {
-                        display: grid;
-                        grid-template-rows: auto auto;
-                        grid-template-columns: 1fr;
-                        grid-column-gap: 1rem;
-                        grid-row-gap: 1rem;
-                        grid-auto-columns: 1fr;
-                    }
-
-                    .agenda-item {
-                        display: grid;
-                        grid-template-rows: auto;
-                        grid-template-columns: 0.25fr 1fr;
-                        grid-auto-columns: 1fr;
-                        grid-column-gap: 2rem;
-                        background-color: #f4f4f6;
-                        border-radius: 0.6rem;
-                        grid-row-gap: 2rem;
-                        padding: 2rem;
-                        position: relative;
-                        overflow: hidden;
-                    }
-
-                    .agenda-time {
-                        padding-top: 0.2rem;
-                    }
-
-                    .agenda-content,
-                    .additional-info {
-                        transition: opacity 0.5s ease, transform 1s ease;
-                    }
-
-                    .additional-info {
-                        position: absolute;
-                        top: 0;
-                        left: 0;
-                        width: 100%;
-                        height: 100%;
-                        padding: 2rem;
-                        box-sizing: border-box;
-                        opacity: 0;
-                        background: #f4f4f6;
-                        transform: translateX(-100%);
-                    }
-
-                    .agenda-item:hover .agenda-content {
-                        opacity: 0;
-                        transform: translateX(100%);
-                    }
-
-                    .agenda-item:hover .additional-info {
-                        opacity: 1;
-                        transform: translateX(0);
-                    }
-
-                    h3 {
-                        margin: 0;
-                    }
-                </style>
             </section>
             <!-- ubicacion -->
             <section class="section-home-location">
@@ -1303,8 +1240,13 @@
                                 <div id="w-node-b38ebd88-2d3c-574e-8f8f-d4a284f58d07-3863c98b"
                                     data-w-id="b38ebd88-2d3c-574e-8f8f-d4a284f58d07" class="location-content-wrapper">
                                     <div class="margin-bottom margin-small">
-                                        <h3 class="text-center text-md-start">CENTRO DE EXPOSICIONES
-                                            Y CONVENCIONES</h3>
+                                        <div class="ubicacionn">
+                                            <h4 class="lugar text-uppercase">Lugar:
+                                            </h4>
+                                            <h4 class="lugar text-uppercase text-align-start">CENTRO DE EXPOSICIONES
+                                                Y CONVENCIONES
+                                            </h4>
+                                        </div>
                                     </div>
 
                                     <div class="w-layout-grid location-list">
@@ -1320,19 +1262,12 @@
                                                     </h4>
                                                     <h4 class="fs-5">Chihuahua, México.</h4>
                                                 </div>
-                                                <p class="text-size-medium">Para llegar al Centro de Exposiciones y
-                                                    Convenciones de Chihuahua desde el Aeropuerto Internacional General
-                                                    Roberto Fierro Villalobos, se puede tomar un coche (25 min) o un
-                                                    autobús (40-60 min). Desde el centro de Chihuahua, en coche se tarda
-                                                    15 min y en autobús 30 min. El Centro cuenta con estacionamiento y
-                                                    se recomienda revisar rutas, horarios de autobuses y considerar el
-                                                    tráfico en horas pico.</p>
                                             </div>
                                         </div>
 
                                     </div>
                                     <div
-                                        class="margin-top margin-medium d-flex justify-content-sm-center justify-content-lg-start ps-md-5">
+                                        class="margin-top margin-medium d-flex justify-content-center justify-content-lg-start ps-md-5">
                                         <a target="_blank"
                                             href="https://www.google.com/maps?ll=28.654587,-106.074699&z=10&t=m&hl=es-ES&gl=US&mapclient=embed&cid=7977009855949666972"
                                             class="button w-button">Link de Ubicación</a>
@@ -1510,7 +1445,7 @@
                         <div class="background-image">
 
                         </div>
-                        <div class="slider">
+                        <div class="slider d-flex justify-content-center align-items-center">
                             <div class="slides">
                                 <div class="slide">
                                     <img src="assets/dentalid~248.webp" alt="Image 3">
