--- a/index.html
+++ b/index.html
@@ -1229,7 +1229,83 @@
                     </div>
                 </div>
 
+                <style>
+                    .conferencista-titulo {
+                        font-weight: 450;
+                    }
 
+                    .agenda-list {
+                        display: grid;
+                        grid-template-rows: auto auto;
+                        grid-template-columns: 1fr;
+                        grid-column-gap: 1rem;
+                        grid-row-gap: 1rem;
+                        grid-auto-columns: 1fr;
+                    }
+
+                    .agenda-item {
+                        display: grid;
+                        grid-template-rows: auto;
+                        grid-template-columns: 0.4fr 1fr;
+                        grid-auto-columns: 1fr;
+                        grid-column-gap: 2rem;
+                        background-color: #f4f4f6;
+                        border-radius: 0.6rem;
+                        grid-row-gap: 2rem;
+                        padding: 3rem;
+                        position: relative;
+                        overflow: hidden;
+                    }
+
+                    @media (max-width : 500px) {
+                        .agenda-item {
+                            padding: 4rem;
+                        }
+
+                        .agenda-content,
+                        .agenda-content2 {
+                            display: flex;
+                            justify-content: start;
+                            align-items: center;
+                        }
+                    }
+
+                    .agenda-time {
+                        padding-top: 0.2rem;
+                    }
+
+                    .agenda-content,
+                    .additional-info {
+                        transition: opacity 0.5s ease, transform 1s ease;
+                    }
+
+                    .additional-info {
+                        position: absolute;
+                        top: 0;
+                        left: 0;
+                        width: 100%;
+                        height: 100%;
+                        padding: 2rem;
+                        box-sizing: border-box;
+                        opacity: 0;
+                        background: #f4f4f6;
+                        transform: translateX(-100%);
+                    }
+
+                    .agenda-item:hover .agenda-content {
+                        opacity: 0;
+                        transform: translateX(100%);
+                    }
+
+                    .agenda-item:hover .additional-info {
+                        opacity: 1;
+                        transform: translateX(0);
+                    }
+
+                    h3 {
+                        margin: 0;
+                    }
+                </style>
             </section>
             <!-- ubicacion -->
             <section class="section-home-location">
@@ -1267,7 +1343,7 @@
 
                                     </div>
                                     <div
-                                        class="margin-top margin-medium d-flex justify-content-center justify-content-lg-start ps-md-5">
+                                        class="margin-top margin-medium d-flex justify-content-sm-center justify-content-lg-start ps-md-5">
                                         <a target="_blank"
                                             href="https://www.google.com/maps?ll=28.654587,-106.074699&z=10&t=m&hl=es-ES&gl=US&mapclient=embed&cid=7977009855949666972"
                                             class="button w-button">Link de Ubicación</a>
