--- a/index.html
+++ b/index.html
@@ -15,7 +15,8 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/intl-tel-input/17.0.8/css/intlTelInput.css" />
-    <link rel="stylesheet" href="styles/styles.css">
+    <link rel="preload" href="styles/custom.css" as="style">
+    <link rel="stylesheet" href="styles/custom.css">
     <style>
         @media (min-width: 992px) {
             html.w-mod-js:not(.w-mod-ix) [data-w-id="7790c7f5-e606-0e16-7ece-290f34840e59"] {
@@ -499,7 +500,8 @@
 
                                 <div class="d-grid align-items-center justify-content-center">
 
-                                    <img class="img-fluid" src="assets/dentalid~243.webp" alt="img evento">
+                                    <img class="img-fluid" loading="lazy" src="assets/dentalid~243.webp"
+                                        alt="img evento">
 
                                 </div>
 
@@ -677,7 +679,7 @@
                                     <div role="listitem" class="speaker-collection-item w-dyn-item">
                                         <div class="speaker-item">
                                             <div class="speaker-image-wrapper">
-                                                <img src="./assets/drHeber.jpg" loading="lazy" alt="Sarah Lee"
+                                                <img src="./assets/drHeber.webp" loading="lazy" alt="Sarah Lee"
                                                     class="speaker-image img-fluid" />
                                             </div>
                                             <div class="speaker-content-wrapper">
@@ -1378,9 +1380,10 @@
                             <div class="organizadores2">
                                 <div class="organizadoresImg2">
                                     <div class="organizadores-grid py-5 py-lg-0">
-                                        <img src="assets/logo-gaux.webp" alt="logo">
-                                        <div class="redes-c">
-                                            <div class="footer-social-list">
+                                        <img loading="lazy" src="assets/logo-gaux.webp" alt="logo">
+                                        <div class="redes-c redes-organizadores">
+                                            <div
+                                                class="footer-social-list d-flex justify-content-center align-items-center">
                                                 <a href="https://www.facebook.com/profile.php?id=100090832025591&ref=xav_ig_profile_web"
                                                     class="footer-social-link" target="_blank">
                                                     <img src="./assets/facebook.webp" loading="lazy" alt="Facebook Icon"
@@ -1403,9 +1406,10 @@
 
                                 <div class="organizadoresImg2">
                                     <div class="organizadores-grid py-5 py-lg-0">
-                                        <img src="assets/Dentalid LOGO.webp" alt="logo">
-                                        <div class="redes-c">
-                                            <div class="footer-social-list">
+                                        <img loading="lazy" src="assets/Dentalid LOGO.webp" alt="logo">
+                                        <div class="redes-c redes-organizadores">
+                                            <div
+                                                class="footer-social-list d-flex justify-content-center align-items-center">
                                                 <a href="https://www.facebook.com/dentalidcuu/"
                                                     class="footer-social-link" target="_blank">
                                                     <img src="./assets/facebook.webp" loading="lazy" alt="Facebook Icon"
@@ -1427,9 +1431,10 @@
 
                                 <div class="organizadoresImg2">
                                     <div class="organizadores-grid py-5 py-lg-0">
-                                        <img src="assets/zeyco_logo.webp" alt="logo">
-                                        <div class="redes-c">
-                                            <div class="footer-social-list">
+                                        <img loading="lazy" src="assets/zeyco_logo.webp" alt="logo">
+                                        <div class="redes-c redes-organizadores">
+                                            <div
+                                                class="footer-social-list d-flex justify-content-center align-items-center">
                                                 <a href="https://www.facebook.com/ZeycoMx/" class="footer-social-link"
                                                     target="_blank">
                                                     <img src="./assets/facebook.webp" loading="lazy" alt="Facebook Icon"
@@ -1449,8 +1454,6 @@
                                         </div>
                                     </div>
                                 </div>
-
-
                             </div>
 
 
@@ -1524,18 +1527,18 @@
                         <div class="slider d-flex justify-content-center align-items-center">
                             <div class="slides">
                                 <div class="slide">
-                                    <img src="assets/dentalid~248.webp" alt="Image 3">
+                                    <img loading="lazy" src="assets/dentalid~248.webp" alt="Image 3">
                                 </div>
                                 <div class="slide">
-                                    <img src="assets/dentalid~269.webp" alt="Image 4">
+                                    <img loading="lazy" src="assets/dentalid~269.webp" alt="Image 4">
                                 </div>
-                                <div class="slide"><img src="assets/dentalid~290.webp" alt="Image 5">
-                                </div>
-                                <div class="slide">
-                                    <img src="assets/dentalid~42.webp" alt="Image 6">
+                                <div class="slide"><img loading="lazy" src="assets/dentalid~290.webp" alt="Image 5">
                                 </div>
                                 <div class="slide">
-                                    <img src="assets/dentalid~75.webp" alt="Image 7">
+                                    <img loading="lazy" src="assets/dentalid~42.webp" alt="Image 6">
+                                </div>
+                                <div class="slide">
+                                    <img loading="lazy" src="assets/dentalid~75.webp" alt="Image 7">
                                 </div>
 
                             </div>
@@ -1772,8 +1775,8 @@
                     <div id="w-node-_7bb6a5d1-d920-daa7-a18a-a375547d8ca2-547d8c7d" class="footer-credit">Todos
                         los derechos reservados</div>
                     <div id="w-node-_7bb6a5d1-d920-daa7-a18a-a375547d8ca4-547d8c7d" class="text-size-small">
-                        Diseñado por: <a href=""><img src="./assets/Transparent Logo.webp" alt="Logo Vexa"
-                                class="vexa-logo"></a>
+                        Diseñado por: <a href=""><img loading="lazy" src="./assets/Transparent Logo.webp"
+                                alt="Logo Vexa" class="vexa-logo"></a>
                     </div>
                 </div>
             </div>
