--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/intl-tel-input/17.0.8/css/intlTelInput.css" />
-    <link rel="preload" href="styles/custom.css" as="style">
-    <link rel="stylesheet" href="styles/custom.css">
+    <link rel="preload" href="styles/styles.css" as="style">
+    <link rel="stylesheet" href="styles/styles.css">
     <style>
         @media (min-width: 992px) {
             html.w-mod-js:not(.w-mod-ix) [data-w-id="7790c7f5-e606-0e16-7ece-290f34840e59"] {
@@ -1661,7 +1661,7 @@
                                 </div>
                             </div>
 
-                            <div role="list" class="faq-collection-list w-dyn-items mx-md-5 mt-md-5">
+                            <div role="list" class="faq-collection-list w-dyn-items mx-md-5 mt-md-5 px-3">
                                 <div role="listitem" class="faq-collection-item w-dyn-item">
                                     <div class="faq-accordion">
                                         <div class="faq-question">
@@ -1784,12 +1784,7 @@
                             </div>
                         </div>
                     </section>
-
-
-
-
                 </div>
-
             </main>
 
             <!-- footer -->
