cambio de escritura

--- a/index.html
+++ b/index.html
@@ -536,7 +536,7 @@
                                 </div>
                                 <div class="speaker-collection-wrapper w-dyn-list">
                                     <div class="mobile-notice">
-                                        Haz clic sobre la imagen para ver la información.
+                                        Presiona la imagen para ver la información.
                                     </div>
                                     <div role="list" class="speaker-collection-list w-dyn-items">
                                         <div role="listitem" class="speaker-collection-item w-dyn-item">
@@ -1018,7 +1018,7 @@
                                         </div>
                                     </div>
                                     <div class="mobile-notice">
-                                        Haz clic sobre el itinerario para ver la información.
+                                        Presiona sobre el itinerario para ver la información.
                                     </div>
                                     <div class="agenda-list">
                                         <h1 class="text-center text-md-start">Día 1</h1>
